--- a/frontend/src/css/workShift.css
+++ b/frontend/src/css/workShift.css
@@ -7,6 +7,9 @@
     .timeslot-list {
         column-count: 2;
         justify-content: center;
+        break-inside: avoid;
+        page-break-inside: avoid;
+        -webkit-column-break-inside: avoid;
     }
 }
 
@@ -20,12 +23,21 @@
 }
 
 .gelatine {
-  animation: gelatine 0.5s infinite;
+    animation: gelatine 0.5s infinite;
 }
+
 @keyframes gelatine {
-  from, to { transform: scale(1, 1); }
-  25% { transform: scale(0.8, 1.3); }
-  50% { transform: scale(1.3, 0.8); }
-  75% { transform: scale(0.8, 1.3); }
+    from, to {
+        transform: scale(1, 1);
+    }
+    25% {
+        transform: scale(0.8, 1.3);
+    }
+    50% {
+        transform: scale(1.3, 0.8);
+    }
+    75% {
+        transform: scale(0.8, 1.3);
+    }
 }
 
